syntax = "proto3";

option csharp_namespace = "InvoicingGrpc";

package client;

// Client service for managing customers
service ClientProtoService {
  // Creates a new client
  rpc CreateClient (CreateClientRequest) returns (ClientResponse);
  
  // Gets a client by ID
  rpc GetClient (GetClientRequest) returns (ClientResponse);
  
  // Lists all clients with optional pagination
  rpc ListClients (ListClientsRequest) returns (ListClientsResponse);
  
  // Updates an existing client
  rpc UpdateClient (UpdateClientRequest) returns (ClientResponse);
  
  // Deletes a client
  rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
}

// Request message for creating a client
message CreateClientRequest {
  string name = 1;
  string email = 2;
  string phone_number = 3;
  string address = 4;
  string company_name = 5;
}

// Request for fetching a specific client
message GetClientRequest {
  string client_id = 1;
}

// Request for listing clients
message ListClientsRequest {
  int32 page_size = 1;
  int32 page_number = 2;
  string search_term = 3;
}

// Response containing list of clients
message ListClientsResponse {
  repeated ClientResponse clients = 1;
  int32 total_count = 2;
  int32 page_size = 3;
  int32 page_number = 4;
}

// Request for updating a client
message UpdateClientRequest {
  string client_id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
  string address = 5;
  string company_name = 6;
}

// Request for deleting a client
message DeleteClientRequest {
  string client_id = 1;
}

// Response after client deletion
message DeleteClientResponse {
  bool success = 1;
  string message = 2;
}

// Client data response
message ClientResponse {
  string client_id = 1;
  string name = 2;
  string email = 3;
  string phone_number = 4;
  string address = 5;
  string company_name = 6;
  string created_at = 7;
  string updated_at = 8;
}
